@@ -5,15 +5,16 @@ scope main {
     // some facts
     vl(20).
 
-    // alice has 3 seconds to achieve b(0), or else, sanction s1
+    // alice has 3 seconds to achieve b(0), or else, sanction!
     norm n1: vl(X) & X > 5
        -> obligation(alice,n1, b(0), `3 seconds`)
-       if unfulfilled: sr1(alice,X).
+          if unfulfilled: sr1(alice,X).
 
     // bob is obliged to apply fines in two seconds
     // (value of C is provide by an external source)
-    norm n2: sanction(A,fine(X)) & extra(C) -> obligation(bob,true,apply_fine(A,X*C),`2 seconds`)
-       if unfulfilled: sr2.
+    norm n2: sanction(A,fine(X)) & extra(C)
+       -> obligation(bob,true,apply_fine(A,X*C),`2 seconds`)
+          if unfulfilled: sr2.
 
     sanction-rule sr1(A,V) -> sanction(A,fine(V)).
 
